# sck-core-invoker

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
core_invoker/: __init__.py  _version.py  handler.py  invoker.py
tests/: arguments.py  bootstrap.py  package.py  seed.py  test_invoker.py
tests/components/: template.yaml
tests/platform/: deployspec.yaml
tests/vars/: sampe-vars.yaml
