[build-system]
requires = [ "poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0",]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "sck-core-invoker"
version = "0.1.1"
description = "Core Automation Invoker Lambda function"
authors = [ "James Barwick <jbarwick@me.com>",]
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["sck", "core", "aws", "cloud", "automation"]
include = ["core_invoker/version.py"]

[[tool.poetry.packages]]
include = "core_invoker"

[[tool.poetry.source]]
name = "nexus"
url = "https://monster-jj.jvj28.com:9091/repository/pypi/simple/"
priority = "primary"

[tool.poetry-dynamic-versioning]
enable = true
bump = true
ignore-untracked = true
style = "semver"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = ">=1.40.11"
botocore = ">=1.40.11"
python-dotenv = "^1.0.1"

[tool.poetry.dependencies.sck-core-component]
path = "../sck-core-component"
develop = true

[tool.poetry.dependencies.sck-core-deployspec]
path = "../sck-core-deployspec"
develop = true

[tool.poetry.dependencies.sck-core-execute]
path = "../sck-core-execute"
develop = true

[tool.poetry.dependencies.sck-core-runner]
path = "../sck-core-runner"
develop = true

[tool.poetry.dependencies.sck-core-db]
path = "../sck-core-db"
develop = true

[tool.poetry.dependencies.sck-core-framework]
path = "../sck-core-framework"
develop = true
[tool.poetry-dynamic-versioning.substitution]
files = ["core_invoker/__init__.py"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
boto3-stubs = ">=1.40.11"
cfn-lint = "^1.22.3"
black = "^24.10.0"
pytest-dotenv = "^0.5.2"
pytest-cov = "^6.0.0"
